--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Using MDX"
 description: "Lorem ipsum dolor sit amet"
-pubDate: "Jun 01 2024"
+pubDate: "2025-12-31"
 labels:
   - category: "programming-language"
     tags: ["go", "javascript"]
   - category: "devops"
-    tags: ["git", kubernetes]
+    tags: ["git", "kubernetes"]
 ---
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
